--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -10,12 +10,12 @@
 <body>
     <%- include('blocks/header') -%>
 
-    <main>
+    <main> 
         <h1>Sign in</h1>
         <div>
             <form method="post" action="/check-user">
-                <input type="text" name="username" placeholder="Name">
-                <input type="password" name="password" placeholder="Password">
+                <input pattern="[a-zA-Z][a-zA-Z0-9]+" type="text" name="username" placeholder="Name">
+                <input pattern="[a-zA-Z][a-zA-Z0-9]+" type="password" name="password" placeholder="Password">
                 <button type="submit">Sign in</button>
             </form>
         </div>
